# KickOff

./: .env.example  .gitignore  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  pyproject.toml
agents/: agent.py  agent_engine_app.py
agents/app_utils/: deploy.py  telemetry.py  typing.py
agents/common/: config.py  contracts.py  corridors.py  dispatch.py  mcp.py  mongo.py
agents/concierge/: agent.py
agents/coordinator/: agent.py
agents/planner/: agent.py
agents/simulator/: agent.py  dispatcher.py  engine.py
deploy/mcp/: Dockerfile
docs/: architecture.md  demo-script.md
gateway/: hub.py  main.py
scripts/: deploy_agents.py  deploy_gateway.sh  deploy_mcp.sh  seed_db.py
tests/integration/: test_agent.py  test_agent_engine_app.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: main.ts  panels.ts  scene.ts  scene3dmaps.ts  style.css
