[project]
name = "kickoff"
version = "0.1.0"
description = "KickOff Agent — multi-agent World Cup 2026 fan logistics simulation for MetLife Stadium"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.31.0",
    "google-cloud-aiplatform[agent_engines]>=1.112.0",
    "google-genai>=1.70.0",
    "a2a-sdk>=0.3.0,<0.4.0",
    "pymongo>=4.10.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.0",
    "mcp>=1.27.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["agents", "gateway"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
